update _importFromNetworkLinks() replace List with HashSet for quicker URI lookups [order not needed]. change networkLinks from ArrayList to LinkedList
git-svn-id: svn+ssh://developer.mitre.org/svnroot/giscore/trunk@1053 5c99b798-f2dd-11dd-9a12-8f84353f4b73